// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`offer templates golden tests > free.base@1.0.0 > produces a stable PDF hash > free.base@1.0.0 pdf sha256 1`] = `"2f61324c9713bcbf71d0793a077222db689ab34be4bae445953c81ea3c845697"`;

exports[`offer templates golden tests > free.base@1.0.0 > produces the expected HTML hash > free.base@1.0.0 html sha256 1`] = `"147665ba027c2a6e85fe95a1ffe1f9dce5d94c646d24bc921bef827edef83648"`;

exports[`offer templates golden tests > free.base@1.0.0 > renders stable HTML > free.base@1.0.0 html 1`] = `
"<!DOCTYPE html>
<html lang="hu">
<head>
<meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>AI ajánlatkészítő bevezetése</title>
    <style>
      
  @page {
    size: A4;
    margin: 24mm 16mm;

    @bottom-right {
      content: "Page " counter(page) " of " counter(pages);
      font-family: 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      font-size: 9pt;
      color: #334155;
    }
  }

  html,
  body {
    height: 100%;
  }

  body {
    margin: 0;
    background: #f8fafc;
    color: #0f172a;
    font: 400 11pt/1.5 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
  }

  .offer-doc {
    box-sizing: border-box;
    width: 100%;
    max-width: 100%;
    margin: 0;
    background: #ffffff;
    border: none;
    box-shadow: none;
    padding-top: 60mm;
    padding-bottom: 42mm;
    position: relative;
  }

  .offer-doc__header {
    background: #ffffff;
    left: 16mm;
    margin-bottom: 0;
    padding-bottom: 6mm;
    position: fixed;
    right: 16mm;
    top: 18mm;
    z-index: 20;
  }

  .offer-doc__header-brand {
    gap: 12mm;
  }

  .offer-doc__logo-wrap {
    border-radius: 10mm;
    height: 34mm;
    padding: 6mm;
    width: 34mm;
  }

  .offer-doc__logo {
    max-height: 28mm;
    max-width: 100%;
  }

  .offer-doc__monogram {
    font-size: 12pt;
    height: 28mm;
    width: 28mm;
  }

  .offer-doc__meta {
    min-width: auto;
  }

  .offer-doc__meta-label {
    font-size: 7pt;
  }

  .offer-doc__meta-value {
    font-size: 10pt;
  }

  .offer-doc__footer {
    background: #ffffff;
    border-top: 1px solid rgba(15, 23, 42, 0.12);
    bottom: 18mm;
    left: 16mm;
    margin-top: 0;
    padding-top: 6mm;
    position: fixed;
    right: 16mm;
    z-index: 20;
  }

  .offer-doc__footer-grid {
    gap: 12mm;
  }

  .offer-doc__footer-column {
    gap: 4mm;
  }

  .offer-doc__footer-label {
    font-size: 7pt;
  }

  .offer-doc__footer-value {
    font-size: 9.5pt;
  }

  p {
    margin: 0 0 1em;
  }

  table,
  th,
  td {
    font-family: 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    font-size: 9.5pt;
    line-height: 1.4;
  }

      
  .offer-doc {
    --brand-primary: #151035;
    --brand-primary-contrast: #ffffff;
    --brand-secondary: #f3f4f6;
    --brand-secondary-border: #d1d5db;
    --brand-secondary-text: #1f2937;
    --brand-muted: #6b7280;
    --brand-text: #1f2937;
    --brand-bg: #ffffff;
    --brand-border: #d1d5db;
    --space-xs: 0.25rem;
    --space-sm: 0.5rem;
    --space-md: 1rem;
    --space-lg: 1.5rem;
    --space-xl: 2.75rem;
    --font-body: 400 0.95rem/1.65 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h1: 700 1.9rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h2: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h3: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-table: 600 0.72rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --radius-sm: 0.75rem;
    --radius-md: 1.25rem;
    --radius-lg: 2rem;
    background: var(--brand-bg, #ffffff);
    color: var(--brand-text, #1f2937);
    font: var(--font-body, 400 0.95rem/1.65 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    margin: 0 auto;
    max-width: 760px;
  }
  .offer-doc--modern {
    border: 1px solid var(--brand-border, #d1d5db);
    border-radius: var(--radius-lg, 32px);
    box-shadow: 0 24px 60px rgba(15, 23, 42, 0.08);
    padding: var(--space-xl, 44px);
  }
  .offer-doc__header {
    align-items: flex-start;
    border-bottom: 1px solid rgba(15, 23, 42, 0.08);
    display: flex;
    gap: var(--space-lg, 1.5rem);
    justify-content: space-between;
    margin-bottom: var(--space-xl, 2.75rem);
    padding-bottom: var(--space-lg, 1.5rem);
  }
  .offer-doc__header-brand {
    align-items: center;
    display: flex;
    gap: var(--space-lg, 1.5rem);
  }
  .offer-doc__logo-wrap {
    align-items: center;
    background: var(--brand-secondary, #f3f4f6);
    border: 1px solid var(--brand-border, #d1d5db);
    border-radius: var(--radius-md, 14px);
    display: flex;
    height: 88px;
    justify-content: center;
    padding: 12px;
    flex-shrink: 0;
    width: 88px;
  }
  .offer-doc__logo {
    max-height: 72px;
    max-width: 220px;
    object-fit: contain;
  }
  .offer-doc__monogram {
    align-items: center;
    background: var(--brand-primary, #151035);
    border-radius: var(--radius-md, 14px);
    color: var(--brand-primary-contrast, #ffffff);
    display: flex;
    font-size: 1.5rem;
    font-weight: 700;
    height: 72px;
    justify-content: center;
    letter-spacing: 0.12em;
    text-transform: uppercase;
    width: 72px;
  }
  .offer-doc__header-text {
    display: flex;
    flex-direction: column;
    gap: 0.35rem;
  }
  .offer-doc__company {
    color: var(--brand-muted, #6b7280);
    font-size: 0.72rem;
    font-weight: 600;
    letter-spacing: 0.22em;
    text-transform: uppercase;
  }
  .offer-doc__title {
    color: var(--brand-primary);
    font: var(--font-h1, 700 1.9rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    margin: 0;
  }
  .offer-doc__meta {
    align-items: flex-end;
    display: flex;
    flex-direction: column;
    gap: 0.45rem;
    min-width: 160px;
    flex-shrink: 0;
    text-align: right;
  }
  .offer-doc__meta-label {
    color: var(--brand-muted, #6b7280);
    font-size: 0.68rem;
    font-weight: 600;
    letter-spacing: 0.12em;
    text-transform: uppercase;
  }
  .offer-doc__meta-value {
    color: var(--brand-text, #1f2937);
    font-size: 0.95rem;
    font-weight: 600;
  }
  .offer-doc__meta-value--placeholder {
    color: var(--brand-muted, #6b7280);
    font-style: italic;
  }
  @media (max-width: 640px) {
    .offer-doc__header {
      align-items: stretch;
      flex-direction: column;
      text-align: left;
    }
    .offer-doc__header-brand {
      justify-content: flex-start;
    }
    .offer-doc__meta {
      align-items: flex-start;
      text-align: left;
    }
  }
  .offer-doc__footer {
    border-top: 1px solid rgba(15, 23, 42, 0.08);
    margin-top: var(--space-xl, 2.75rem);
    padding-top: var(--space-lg, 1.5rem);
  }
  .offer-doc__footer-grid {
    display: grid;
    gap: var(--space-lg, 1.5rem);
    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  }
  .offer-doc__footer-column {
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
  }
  .offer-doc__footer-label {
    color: var(--brand-muted, #6b7280);
    font-size: 0.68rem;
    font-weight: 600;
    letter-spacing: 0.1em;
    text-transform: uppercase;
  }
  .offer-doc__footer-label--sub {
    font-size: 0.62rem;
    letter-spacing: 0.08em;
    margin-top: 0.25rem;
  }
  .offer-doc__footer-value {
    color: var(--brand-text, #1f2937);
    font-size: 0.92rem;
    word-break: break-word;
  }
  .offer-doc__footer-value--placeholder {
    color: var(--brand-muted, #6b7280);
    font-style: italic;
  }
  .offer-doc__content {
    font-size: 0.95rem;
  }
  .offer-doc__content h1,
  .offer-doc__content h2,
  .offer-doc__content h3,
  .offer-doc__content h4 {
    color: var(--brand-primary);
    margin: 2.2rem 0 0.9rem;
  }
  .offer-doc__section-title {
    align-items: center;
    display: flex;
    gap: 0.55rem;
  }
  .offer-doc__section-icon {
    color: currentColor;
    display: inline-flex;
    flex-shrink: 0;
    height: 1.1rem;
    width: 1.1rem;
  }
  .offer-doc__section-icon svg {
    display: block;
    height: 100%;
    width: 100%;
  }
  .offer-doc__section-note {
    color: var(--brand-muted, #6b7280);
    font-size: 0.92rem;
    margin-top: 0.75rem;
  }
  .offer-doc__section-note--compact {
    color: inherit;
    font-weight: 600;
  }
  .offer-doc__content h1 {
    font: var(--font-h2, 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    letter-spacing: -0.125rem;
  }
  .offer-doc__content h2,
  .offer-doc__content h3,
  .offer-doc__content h4 {
    font: var(--font-h3, 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
  }
  .offer-doc__content h1:first-child,
  .offer-doc__content h2:first-child,
  .offer-doc__content h3:first-child {
    margin-top: 0;
  }
  .offer-doc__content p {
    margin: 0 0 1rem;
  }
  .offer-doc__content ul,
  .offer-doc__content ol {
    margin: 0 0 1.2rem 1.4rem;
    padding: 0;
    list-style-position: outside;
  }
  .offer-doc__content ul {
    list-style-type: disc;
  }
  .offer-doc__content ol {
    list-style-type: decimal;
  }
  .offer-doc__content ul ul {
    list-style-type: circle;
  }
  .offer-doc__content ol ol,
  .offer-doc__content ul ol {
    list-style-type: lower-alpha;
  }
  .offer-doc__content li {
    margin-bottom: 0.45rem;
  }
  .offer-doc__compact {
    display: flex;
    flex-direction: column;
    gap: 1.75rem;
  }
  .offer-doc__compact-intro {
    background: var(--brand-secondary);
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 24px);
    display: grid;
    gap: 1.4rem;
    padding: var(--space-lg, 1.6rem) var(--space-xl, 1.9rem);
  }
  @media (min-width: 640px) {
    .offer-doc__compact-intro {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
  }
  .offer-doc__compact-block h2,
  .offer-doc__compact-block h3 {
    margin-top: 0;
  }
  .offer-doc__compact-block--highlights ul {
    margin-left: 1.2rem;
  }
  .offer-doc__compact-grid {
    display: grid;
    gap: 1.2rem;
  }
  @media (min-width: 720px) {
    .offer-doc__compact-grid {
      grid-template-columns: repeat(3, minmax(0, 1fr));
    }
  }
  .offer-doc__compact-card {
    background: var(--brand-bg, #ffffff);
    border: 1px solid var(--brand-border, #d1d5db);
    border-radius: var(--radius-md, 22px);
    box-shadow: 0 12px 28px rgba(15, 23, 42, 0.08);
    padding: var(--space-lg, 1.5rem) var(--space-xl, 1.7rem);
  }
  .offer-doc__compact-card h3 {
    margin-top: 0;
    margin-bottom: 0.75rem;
  }
  .offer-doc__compact-bottom {
    display: grid;
    gap: 1.2rem;
  }
  @media (min-width: 720px) {
    .offer-doc__compact-bottom {
      grid-template-columns: 1.15fr 0.85fr;
    }
  }
  .offer-doc__compact-card--accent {
    background: var(--brand-primary);
    border-color: transparent;
    color: var(--brand-primary-contrast);
  }
  .offer-doc__compact-card--accent h3 {
    color: inherit;
  }
  .offer-doc__compact-card--accent ul,
  .offer-doc__compact-card--accent li {
    color: inherit;
  }
  .offer-doc__compact-card--closing {
    background: var(--brand-secondary, #f9fafb);
  }
  .offer-doc__table {
    margin-top: 2.5rem;
  }
  .offer-doc__pricing-table {
    border-collapse: collapse;
    font-size: 0.85rem;
    width: 100%;
  }
  .offer-doc__pricing-table thead th {
    background: var(--brand-secondary);
    border-bottom: 1px solid var(--brand-secondary-border);
    color: var(--brand-secondary-text);
    font: var(--font-table, 600 0.72rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    letter-spacing: 0.08em;
    padding: 0.65rem 0.75rem;
    text-transform: uppercase;
  }
  .offer-doc__pricing-table tbody td {
    border-bottom: 1px solid var(--brand-secondary-border);
    color: var(--brand-text, #374151);
    padding: 0.6rem 0.75rem;
    vertical-align: top;
  }
  .offer-doc__pricing-table tbody tr:last-child td {
    border-bottom: 1px solid var(--brand-secondary-border);
  }
  .offer-doc__pricing-table tfoot td {
    font-weight: 600;
    padding: 0.75rem 0.75rem;
  }
  .offer-doc__pricing-table tfoot tr:first-child td {
    border-top: 2px solid var(--brand-primary);
  }
  .offer-doc__pricing-table tfoot tr:last-child td {
    background: var(--brand-primary);
    color: var(--brand-primary-contrast);
  }
  .offer-doc--premium {
    border-radius: 36px;
    box-shadow: 0 32px 70px rgba(15, 23, 42, 0.12);
    overflow: hidden;
  }
  .offer-doc__header--premium {
    background: linear-gradient(135deg, var(--brand-primary), var(--brand-secondary));
    color: var(--brand-primary-contrast);
    padding: 48px 48px 32px;
    border-bottom: none;
  }
  .offer-doc__premium-banner {
    align-items: center;
    display: flex;
    gap: 32px;
  }
  .offer-doc__premium-logo-slot {
    align-items: center;
    border-radius: 24px;
    display: flex;
    height: 140px;
    justify-content: center;
    width: 140px;
  }
  .offer-doc__premium-logo-slot--filled {
    background: rgba(255, 255, 255, 0.12);
  }
  .offer-doc__premium-logo-slot--empty {
    background: rgba(255, 255, 255, 0.08);
  }
  .offer-doc__monogram--premium {
    align-items: center;
    background: rgba(4, 21, 36, 0.3);
    border-radius: 18px;
    color: #ffffff;
    display: flex;
    font-size: 2rem;
    font-weight: 700;
    height: 96px;
    justify-content: center;
    letter-spacing: 0.16em;
    text-transform: uppercase;
    width: 96px;
  }
  .offer-doc__logo--premium {
    max-height: 100%;
    max-width: 100%;
    object-fit: contain;
  }
  .offer-doc__premium-text {
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 0.4rem;
  }
  .offer-doc__company--premium {
    color: rgba(255, 255, 255, 0.82);
    font-size: 0.75rem;
    font-weight: 600;
    letter-spacing: 0.22em;
    text-transform: uppercase;
  }
  .offer-doc__title--premium {
    color: #ffffff;
    font-size: 2.15rem;
    font-weight: 700;
    letter-spacing: -0.125rem;
    margin: 0;
  }
  .offer-doc__meta--premium {
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
    margin-top: 28px;
    text-align: right;
  }
  .offer-doc__meta-label--premium {
    color: rgba(255, 255, 255, 0.75);
  }
  .offer-doc__meta-value--premium {
    color: #ffffff;
  }
  .offer-doc__meta-value--premium.offer-doc__meta-value--placeholder {
    color: rgba(255, 255, 255, 0.75);
  }
  .offer-doc__premium-body {
    background: #f8fafc;
    padding: 40px 48px 48px;
  }
  .offer-doc__content--card {
    background: #ffffff;
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 28px);
    box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
    padding: 32px 36px;
  }
  .offer-doc__table--card {
    background: #ffffff;
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 28px);
    box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
    margin-top: 32px;
    overflow: hidden;
  }
  .offer-doc__table--card .offer-doc__pricing-table thead th {
    background: var(--brand-secondary);
  }
  .offer-doc__table--card .offer-doc__pricing-table tfoot tr:first-child td {
    border-top: 3px solid var(--brand-primary);
  }
  .offer-doc__table--card .offer-doc__pricing-table tfoot tr:last-child td {
    background: var(--brand-primary);
    color: var(--brand-primary-contrast);
  }

      .offer-doc {
      --brand-primary: #151035;
      --brand-primary-contrast: #ffffff;
      --brand-secondary: #f3f4f6;
      --brand-secondary-border: #d1d5db;
      --brand-secondary-text: #6b7280;
      --brand-muted: #6b7280;
      --brand-text: #1f2937;
      --brand-bg: #ffffff;
      --brand-border: #d1d5db;
      --space-xs: 0.25rem;
      --space-sm: 0.5rem;
      --space-md: 1rem;
      --space-lg: 1.5rem;
      --space-xl: 2.75rem;
      --font-body: 400 0.95rem/1.65 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      --font-h1: 700 1.9rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      --font-h2: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      --font-h3: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      --font-table: 600 0.72rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      --radius-sm: 0.75rem;
      --radius-md: 1.25rem;
      --radius-lg: 2rem;
    }
    </style>
</head>
<body>
<main class="offer-template offer-template--modern">
      <article class="offer-doc offer-doc--modern">

        <header class="offer-doc__header">
          <div class="offer-doc__header-brand">
            <div class="offer-doc__logo-wrap"><img class="offer-doc__logo" src="https://cdn.example.com/assets/logo.png" alt="Cég logó" /></div>
            <div class="offer-doc__header-text">
              <div class="offer-doc__company">Digitális Megoldások Kft.</div>
              <h1 class="offer-doc__title">AI ajánlatkészítő bevezetése</h1>
            </div>
          </div>
          <div class="offer-doc__meta">
            <span class="offer-doc__meta-label">Ajánlat dátuma</span>
            <span class="offer-doc__meta-value">2025. január 15.</span>
          </div>
        </header>
  
        <section class="offer-doc__content">
          <section>
    <h2>Bevezető</h2>
    <p>A projekt célja egy modern, AI-támogatott ajánlatkészítő eszköz bevezetése.</p>
    <p>A megoldás lehetővé teszi a csapat számára, hogy gyorsan reagáljon az ügyféligényekre, miközben megőrzi a márka hangját.</p>
    <h2>Szolgáltatások</h2>
    <ul>
      <li>Kezdeti konzultáció és stratégiaalkotás</li>
      <li>Felhasználói élménykutatás és prototípus készítés</li>
      <li>Bevezetési támogatás és csapat tréning</li>
    </ul>
    <h2>Eredmények</h2>
    <p>Az automatizált folyamat 60%-kal csökkenti az ajánlatok összeállításához szükséges időt.</p>
  </section>
        </section>
  
        <section class="offer-doc__table">
          <h2 class="offer-doc__section-title"><span class="offer-doc__section-icon" aria-hidden="true"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><path d="M7 7h10l4 5-4 5H7l-4-5z"/><path d="M12 9v6"/><path d="M10 11h4"/></svg></span><span>Pricing</span></h2>
          
    <style>
      .offer-doc__pricing-table {
        width: 100%;
        border-collapse: collapse;
        border: 1px solid #d7dce6;
      }
      .offer-doc__pricing-table th,
      .offer-doc__pricing-table td {
        padding: 8px 12px;
        border-bottom: 1px solid #e4e8f0;
      }
      .offer-doc__pricing-table thead th {
        background-color: #f1f4f8;
        text-align: left;
      }
      .offer-doc__pricing-table tbody tr:nth-child(even) {
        background-color: #f9fbff;
      }
      .offer-doc__pricing-table tbody td:nth-child(2),
      .offer-doc__pricing-table tbody td:nth-child(4),
      .offer-doc__pricing-table tbody td:nth-child(5),
      .offer-doc__pricing-table tbody td:nth-child(6),
      .offer-doc__pricing-table thead th:nth-child(2),
      .offer-doc__pricing-table thead th:nth-child(4),
      .offer-doc__pricing-table thead th:nth-child(5),
      .offer-doc__pricing-table thead th:nth-child(6),
      .offer-doc__pricing-table tfoot td:last-child {
        text-align: right;
      }
      .offer-doc__pricing-table tfoot tr {
        background-color: #eef2ff;
        font-weight: 600;
      }
      .offer-doc__pricing-table tfoot tr:first-child td {
        border-top: 2px solid #b2c3ff;
      }
      .offer-doc__pricing-table tfoot tr:last-child {
        font-weight: 700;
      }
    </style>
    <table class="offer-doc__pricing-table">
      <colgroup>
        <col style="width: 32%;" />
        <col style="width: 12%; min-width: 60px;" />
        <col style="width: 12%; min-width: 80px;" />
        <col style="width: 16%; min-width: 110px;" />
        <col style="width: 12%; min-width: 80px;" />
        <col style="width: 16%;" />
      </colgroup>
      <thead>
        <tr>
          <th>Tétel</th>
          <th>Mennyiség</th>
          <th style="text-align: left;">Egység</th>
          <th>Egységár (Ft)</th>
          <th>ÁFA %</th>
          <th>Összesen (nettó)</th>
        </tr>
      </thead>
      <tbody>
        
              <tr>
                <td style="max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Stratégiai workshop">Stratégiai workshop</td>
                <td>2</td>
                <td style="text-align: left;">nap</td>
                <td>120 000 Ft</td>
                <td>27 %</td>
                <td>240 000 Ft</td>
              </tr>
            
              <tr>
                <td style="max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Digitális prototípus">Digitális prototípus</td>
                <td>1</td>
                <td style="text-align: left;">projekt</td>
                <td>450 000 Ft</td>
                <td>27 %</td>
                <td>450 000 Ft</td>
              </tr>
            
              <tr>
                <td style="max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Támogatás">Támogatás</td>
                <td>6</td>
                <td style="text-align: left;">hónap</td>
                <td>75 000 Ft</td>
                <td>27 %</td>
                <td>450 000 Ft</td>
              </tr>
            
      </tbody>
      <tfoot>
        <tr>
          <td colspan="5">Nettó összesen</td>
          <td>1 140 000 Ft</td>
        </tr>
        <tr>
          <td colspan="5">ÁFA</td>
          <td>307 800 Ft</td>
        </tr>
        <tr>
          <td colspan="5">Bruttó összesen</td>
          <td>1 447 800 Ft</td>
        </tr>
      </tfoot>
    </table>
  
        </section>
  
        <footer class="offer-doc__footer">
          <div class="offer-doc__footer-grid">
            <div class="offer-doc__footer-column">
              <span class="offer-doc__footer-label">Kapcsolattartó</span>
              <span class="offer-doc__footer-value">Kiss Júlia</span>
            </div>
            <div class="offer-doc__footer-column">
              <span class="offer-doc__footer-label">E-mail</span>
              <span class="offer-doc__footer-value">hello@example.com</span>
              <span class="offer-doc__footer-label offer-doc__footer-label--sub">Telefon</span>
              <span class="offer-doc__footer-value">+36 30 123 4567</span>
            </div>
            <div class="offer-doc__footer-column">
              <span class="offer-doc__footer-label">Weboldal</span>
              <span class="offer-doc__footer-value">https://example.com</span>
            </div>
            <div class="offer-doc__footer-column">
              <span class="offer-doc__footer-label">Cégadatok</span>
              <span class="offer-doc__footer-label offer-doc__footer-label--sub">Cím</span>
              <span class="offer-doc__footer-value">Budapest, Andrássy út 1.</span>
              <span class="offer-doc__footer-label offer-doc__footer-label--sub">Adószám</span>
              <span class="offer-doc__footer-value">12345678-1-12</span>
            </div>
          </div>
        </footer>
  
      </article>
    </main>
</body>
</html>"
`;

exports[`offer templates golden tests > premium.elegant@1.0.0 > produces a stable PDF hash > premium.elegant@1.0.0 pdf sha256 1`] = `"0177ab8e32fbde566d948d61fa5d5360761c7977b57731f5763aeed4c7acc964"`;

exports[`offer templates golden tests > premium.elegant@1.0.0 > produces the expected HTML hash > premium.elegant@1.0.0 html sha256 1`] = `"03ccfe711662c9c26dc35d3d94226a454f5788f5947b30f8d1f716808d2df6de"`;

exports[`offer templates golden tests > premium.elegant@1.0.0 > renders stable HTML > premium.elegant@1.0.0 html 1`] = `
"<!DOCTYPE html>
<html lang="hu">
<head>
<meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>AI ajánlatkészítő bevezetése</title>
    <style>
      
  @page {
    size: A4;
    margin: 24mm 16mm;

    @bottom-right {
      content: "Page " counter(page) " of " counter(pages);
      font-family: 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
      font-size: 9pt;
      color: #334155;
    }
  }

  html,
  body {
    height: 100%;
  }

  body {
    margin: 0;
    background: #f8fafc;
    color: #0f172a;
    font: 400 11pt/1.5 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
  }

  .offer-doc {
    box-sizing: border-box;
    width: 100%;
    max-width: 100%;
    margin: 0;
    background: #ffffff;
    border: none;
    box-shadow: none;
    padding-top: 60mm;
    padding-bottom: 42mm;
    position: relative;
  }

  .offer-doc__header {
    background: #ffffff;
    left: 16mm;
    margin-bottom: 0;
    padding-bottom: 6mm;
    position: fixed;
    right: 16mm;
    top: 18mm;
    z-index: 20;
  }

  .offer-doc__header-brand {
    gap: 12mm;
  }

  .offer-doc__logo-wrap {
    border-radius: 10mm;
    height: 34mm;
    padding: 6mm;
    width: 34mm;
  }

  .offer-doc__logo {
    max-height: 28mm;
    max-width: 100%;
  }

  .offer-doc__monogram {
    font-size: 12pt;
    height: 28mm;
    width: 28mm;
  }

  .offer-doc__meta {
    min-width: auto;
  }

  .offer-doc__meta-label {
    font-size: 7pt;
  }

  .offer-doc__meta-value {
    font-size: 10pt;
  }

  .offer-doc__footer {
    background: #ffffff;
    border-top: 1px solid rgba(15, 23, 42, 0.12);
    bottom: 18mm;
    left: 16mm;
    margin-top: 0;
    padding-top: 6mm;
    position: fixed;
    right: 16mm;
    z-index: 20;
  }

  .offer-doc__footer-grid {
    gap: 12mm;
  }

  .offer-doc__footer-column {
    gap: 4mm;
  }

  .offer-doc__footer-label {
    font-size: 7pt;
  }

  .offer-doc__footer-value {
    font-size: 9.5pt;
  }

  p {
    margin: 0 0 1em;
  }

  table,
  th,
  td {
    font-family: 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    font-size: 9.5pt;
    line-height: 1.4;
  }

      
  .offer-doc {
    --brand-primary: #151035;
    --brand-primary-contrast: #ffffff;
    --brand-secondary: #f3f4f6;
    --brand-secondary-border: #d1d5db;
    --brand-secondary-text: #1f2937;
    --brand-muted: #6b7280;
    --brand-text: #1f2937;
    --brand-bg: #ffffff;
    --brand-border: #d1d5db;
    --space-xs: 0.25rem;
    --space-sm: 0.5rem;
    --space-md: 1rem;
    --space-lg: 1.5rem;
    --space-xl: 2.75rem;
    --font-body: 400 0.95rem/1.65 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h1: 700 1.9rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h2: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-h3: 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --font-table: 600 0.72rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
    --radius-sm: 0.75rem;
    --radius-md: 1.25rem;
    --radius-lg: 2rem;
    background: var(--brand-bg, #ffffff);
    color: var(--brand-text, #1f2937);
    font: var(--font-body, 400 0.95rem/1.65 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    margin: 0 auto;
    max-width: 760px;
  }
  .offer-doc--modern {
    border: 1px solid var(--brand-border, #d1d5db);
    border-radius: var(--radius-lg, 32px);
    box-shadow: 0 24px 60px rgba(15, 23, 42, 0.08);
    padding: var(--space-xl, 44px);
  }
  .offer-doc__header {
    align-items: flex-start;
    border-bottom: 1px solid rgba(15, 23, 42, 0.08);
    display: flex;
    gap: var(--space-lg, 1.5rem);
    justify-content: space-between;
    margin-bottom: var(--space-xl, 2.75rem);
    padding-bottom: var(--space-lg, 1.5rem);
  }
  .offer-doc__header-brand {
    align-items: center;
    display: flex;
    gap: var(--space-lg, 1.5rem);
  }
  .offer-doc__logo-wrap {
    align-items: center;
    background: var(--brand-secondary, #f3f4f6);
    border: 1px solid var(--brand-border, #d1d5db);
    border-radius: var(--radius-md, 14px);
    display: flex;
    height: 88px;
    justify-content: center;
    padding: 12px;
    flex-shrink: 0;
    width: 88px;
  }
  .offer-doc__logo {
    max-height: 72px;
    max-width: 220px;
    object-fit: contain;
  }
  .offer-doc__monogram {
    align-items: center;
    background: var(--brand-primary, #151035);
    border-radius: var(--radius-md, 14px);
    color: var(--brand-primary-contrast, #ffffff);
    display: flex;
    font-size: 1.5rem;
    font-weight: 700;
    height: 72px;
    justify-content: center;
    letter-spacing: 0.12em;
    text-transform: uppercase;
    width: 72px;
  }
  .offer-doc__header-text {
    display: flex;
    flex-direction: column;
    gap: 0.35rem;
  }
  .offer-doc__company {
    color: var(--brand-muted, #6b7280);
    font-size: 0.72rem;
    font-weight: 600;
    letter-spacing: 0.22em;
    text-transform: uppercase;
  }
  .offer-doc__title {
    color: var(--brand-primary);
    font: var(--font-h1, 700 1.9rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    margin: 0;
  }
  .offer-doc__meta {
    align-items: flex-end;
    display: flex;
    flex-direction: column;
    gap: 0.45rem;
    min-width: 160px;
    flex-shrink: 0;
    text-align: right;
  }
  .offer-doc__meta-label {
    color: var(--brand-muted, #6b7280);
    font-size: 0.68rem;
    font-weight: 600;
    letter-spacing: 0.12em;
    text-transform: uppercase;
  }
  .offer-doc__meta-value {
    color: var(--brand-text, #1f2937);
    font-size: 0.95rem;
    font-weight: 600;
  }
  .offer-doc__meta-value--placeholder {
    color: var(--brand-muted, #6b7280);
    font-style: italic;
  }
  @media (max-width: 640px) {
    .offer-doc__header {
      align-items: stretch;
      flex-direction: column;
      text-align: left;
    }
    .offer-doc__header-brand {
      justify-content: flex-start;
    }
    .offer-doc__meta {
      align-items: flex-start;
      text-align: left;
    }
  }
  .offer-doc__footer {
    border-top: 1px solid rgba(15, 23, 42, 0.08);
    margin-top: var(--space-xl, 2.75rem);
    padding-top: var(--space-lg, 1.5rem);
  }
  .offer-doc__footer-grid {
    display: grid;
    gap: var(--space-lg, 1.5rem);
    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  }
  .offer-doc__footer-column {
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
  }
  .offer-doc__footer-label {
    color: var(--brand-muted, #6b7280);
    font-size: 0.68rem;
    font-weight: 600;
    letter-spacing: 0.1em;
    text-transform: uppercase;
  }
  .offer-doc__footer-label--sub {
    font-size: 0.62rem;
    letter-spacing: 0.08em;
    margin-top: 0.25rem;
  }
  .offer-doc__footer-value {
    color: var(--brand-text, #1f2937);
    font-size: 0.92rem;
    word-break: break-word;
  }
  .offer-doc__footer-value--placeholder {
    color: var(--brand-muted, #6b7280);
    font-style: italic;
  }
  .offer-doc__content {
    font-size: 0.95rem;
  }
  .offer-doc__content h1,
  .offer-doc__content h2,
  .offer-doc__content h3,
  .offer-doc__content h4 {
    color: var(--brand-primary);
    margin: 2.2rem 0 0.9rem;
  }
  .offer-doc__section-title {
    align-items: center;
    display: flex;
    gap: 0.55rem;
  }
  .offer-doc__section-icon {
    color: currentColor;
    display: inline-flex;
    flex-shrink: 0;
    height: 1.1rem;
    width: 1.1rem;
  }
  .offer-doc__section-icon svg {
    display: block;
    height: 100%;
    width: 100%;
  }
  .offer-doc__section-note {
    color: var(--brand-muted, #6b7280);
    font-size: 0.92rem;
    margin-top: 0.75rem;
  }
  .offer-doc__section-note--compact {
    color: inherit;
    font-weight: 600;
  }
  .offer-doc__content h1 {
    font: var(--font-h2, 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    letter-spacing: -0.125rem;
  }
  .offer-doc__content h2,
  .offer-doc__content h3,
  .offer-doc__content h4 {
    font: var(--font-h3, 600 1.15rem/1.4 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
  }
  .offer-doc__content h1:first-child,
  .offer-doc__content h2:first-child,
  .offer-doc__content h3:first-child {
    margin-top: 0;
  }
  .offer-doc__content p {
    margin: 0 0 1rem;
  }
  .offer-doc__content ul,
  .offer-doc__content ol {
    margin: 0 0 1.2rem 1.4rem;
    padding: 0;
    list-style-position: outside;
  }
  .offer-doc__content ul {
    list-style-type: disc;
  }
  .offer-doc__content ol {
    list-style-type: decimal;
  }
  .offer-doc__content ul ul {
    list-style-type: circle;
  }
  .offer-doc__content ol ol,
  .offer-doc__content ul ol {
    list-style-type: lower-alpha;
  }
  .offer-doc__content li {
    margin-bottom: 0.45rem;
  }
  .offer-doc__compact {
    display: flex;
    flex-direction: column;
    gap: 1.75rem;
  }
  .offer-doc__compact-intro {
    background: var(--brand-secondary);
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 24px);
    display: grid;
    gap: 1.4rem;
    padding: var(--space-lg, 1.6rem) var(--space-xl, 1.9rem);
  }
  @media (min-width: 640px) {
    .offer-doc__compact-intro {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
  }
  .offer-doc__compact-block h2,
  .offer-doc__compact-block h3 {
    margin-top: 0;
  }
  .offer-doc__compact-block--highlights ul {
    margin-left: 1.2rem;
  }
  .offer-doc__compact-grid {
    display: grid;
    gap: 1.2rem;
  }
  @media (min-width: 720px) {
    .offer-doc__compact-grid {
      grid-template-columns: repeat(3, minmax(0, 1fr));
    }
  }
  .offer-doc__compact-card {
    background: var(--brand-bg, #ffffff);
    border: 1px solid var(--brand-border, #d1d5db);
    border-radius: var(--radius-md, 22px);
    box-shadow: 0 12px 28px rgba(15, 23, 42, 0.08);
    padding: var(--space-lg, 1.5rem) var(--space-xl, 1.7rem);
  }
  .offer-doc__compact-card h3 {
    margin-top: 0;
    margin-bottom: 0.75rem;
  }
  .offer-doc__compact-bottom {
    display: grid;
    gap: 1.2rem;
  }
  @media (min-width: 720px) {
    .offer-doc__compact-bottom {
      grid-template-columns: 1.15fr 0.85fr;
    }
  }
  .offer-doc__compact-card--accent {
    background: var(--brand-primary);
    border-color: transparent;
    color: var(--brand-primary-contrast);
  }
  .offer-doc__compact-card--accent h3 {
    color: inherit;
  }
  .offer-doc__compact-card--accent ul,
  .offer-doc__compact-card--accent li {
    color: inherit;
  }
  .offer-doc__compact-card--closing {
    background: var(--brand-secondary, #f9fafb);
  }
  .offer-doc__table {
    margin-top: 2.5rem;
  }
  .offer-doc__pricing-table {
    border-collapse: collapse;
    font-size: 0.85rem;
    width: 100%;
  }
  .offer-doc__pricing-table thead th {
    background: var(--brand-secondary);
    border-bottom: 1px solid var(--brand-secondary-border);
    color: var(--brand-secondary-text);
    font: var(--font-table, 600 0.72rem/1.2 'Work Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif);
    letter-spacing: 0.08em;
    padding: 0.65rem 0.75rem;
    text-transform: uppercase;
  }
  .offer-doc__pricing-table tbody td {
    border-bottom: 1px solid var(--brand-secondary-border);
    color: var(--brand-text, #374151);
    padding: 0.6rem 0.75rem;
    vertical-align: top;
  }
  .offer-doc__pricing-table tbody tr:last-child td {
    border-bottom: 1px solid var(--brand-secondary-border);
  }
  .offer-doc__pricing-table tfoot td {
    font-weight: 600;
    padding: 0.75rem 0.75rem;
  }
  .offer-doc__pricing-table tfoot tr:first-child td {
    border-top: 2px solid var(--brand-primary);
  }
  .offer-doc__pricing-table tfoot tr:last-child td {
    background: var(--brand-primary);
    color: var(--brand-primary-contrast);
  }
  .offer-doc--premium {
    border-radius: 36px;
    box-shadow: 0 32px 70px rgba(15, 23, 42, 0.12);
    overflow: hidden;
  }
  .offer-doc__header--premium {
    background: linear-gradient(135deg, var(--brand-primary), var(--brand-secondary));
    color: var(--brand-primary-contrast);
    padding: 48px 48px 32px;
    border-bottom: none;
  }
  .offer-doc__premium-banner {
    align-items: center;
    display: flex;
    gap: 32px;
  }
  .offer-doc__premium-logo-slot {
    align-items: center;
    border-radius: 24px;
    display: flex;
    height: 140px;
    justify-content: center;
    width: 140px;
  }
  .offer-doc__premium-logo-slot--filled {
    background: rgba(255, 255, 255, 0.12);
  }
  .offer-doc__premium-logo-slot--empty {
    background: rgba(255, 255, 255, 0.08);
  }
  .offer-doc__monogram--premium {
    align-items: center;
    background: rgba(4, 21, 36, 0.3);
    border-radius: 18px;
    color: #ffffff;
    display: flex;
    font-size: 2rem;
    font-weight: 700;
    height: 96px;
    justify-content: center;
    letter-spacing: 0.16em;
    text-transform: uppercase;
    width: 96px;
  }
  .offer-doc__logo--premium {
    max-height: 100%;
    max-width: 100%;
    object-fit: contain;
  }
  .offer-doc__premium-text {
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 0.4rem;
  }
  .offer-doc__company--premium {
    color: rgba(255, 255, 255, 0.82);
    font-size: 0.75rem;
    font-weight: 600;
    letter-spacing: 0.22em;
    text-transform: uppercase;
  }
  .offer-doc__title--premium {
    color: #ffffff;
    font-size: 2.15rem;
    font-weight: 700;
    letter-spacing: -0.125rem;
    margin: 0;
  }
  .offer-doc__meta--premium {
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
    margin-top: 28px;
    text-align: right;
  }
  .offer-doc__meta-label--premium {
    color: rgba(255, 255, 255, 0.75);
  }
  .offer-doc__meta-value--premium {
    color: #ffffff;
  }
  .offer-doc__meta-value--premium.offer-doc__meta-value--placeholder {
    color: rgba(255, 255, 255, 0.75);
  }
  .offer-doc__premium-body {
    background: #f8fafc;
    padding: 40px 48px 48px;
  }
  .offer-doc__content--card {
    background: #ffffff;
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 28px);
    box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
    padding: 32px 36px;
  }
  .offer-doc__table--card {
    background: #ffffff;
    border: 1px solid var(--brand-secondary-border);
    border-radius: var(--radius-lg, 28px);
    box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
    margin-top: 32px;
    overflow: hidden;
  }
  .offer-doc__table--card .offer-doc__pricing-table thead th {
    background: var(--brand-secondary);
  }
  .offer-doc__table--card .offer-doc__pricing-table tfoot tr:first-child td {
    border-top: 3px solid var(--brand-primary);
  }
  .offer-doc__table--card .offer-doc__pricing-table tfoot tr:last-child td {
    background: var(--brand-primary);
    color: var(--brand-primary-contrast);
  }

      .offer-doc {
      --brand-primary: #0f172a;
      --brand-primary-contrast: #ffffff;
      --brand-secondary: #e5e7eb;
      --brand-secondary-border: #cbd5f5;
      --brand-secondary-text: #4b5563;
      --brand-muted: #4b5563;
      --brand-text: #111827;
      --brand-bg: #ffffff;
      --brand-border: #cbd5f5;
      --space-xs: 0.35rem;
      --space-sm: 0.65rem;
      --space-md: 1.15rem;
      --space-lg: 1.85rem;
      --space-xl: 3rem;
      --font-body: 400 1rem/1.7 'Poppins', 'Work Sans', 'Segoe UI', sans-serif;
      --font-h1: 700 2.1rem/1.2 'Poppins', 'Work Sans', 'Segoe UI', sans-serif;
      --font-h2: 600 1.35rem/1.3 'Poppins', 'Work Sans', 'Segoe UI', sans-serif;
      --font-h3: 600 1.15rem/1.3 'Poppins', 'Work Sans', 'Segoe UI', sans-serif;
      --font-table: 600 0.78rem/1.2 'Poppins', 'Work Sans', 'Segoe UI', sans-serif;
      --radius-sm: 0.85rem;
      --radius-md: 1.5rem;
      --radius-lg: 2.5rem;
    }
    </style>
</head>
<body>
<main class="offer-template offer-template--premium">
      <article class="offer-doc offer-doc--premium">

        <header class="offer-doc__header offer-doc__header--premium">
          <div class="offer-doc__premium-banner">
            <div class="offer-doc__premium-logo-slot offer-doc__premium-logo-slot--filled"><img class="offer-doc__logo offer-doc__logo--premium" src="https://cdn.example.com/assets/logo.png" alt="Cég logó" /></div>
            <div class="offer-doc__premium-text">
              <div class="offer-doc__company offer-doc__company--premium">Digitális Megoldások Kft.</div>
              <h1 class="offer-doc__title offer-doc__title--premium">AI ajánlatkészítő bevezetése</h1>
            </div>
          </div>
          <div class="offer-doc__meta offer-doc__meta--premium">
            <span class="offer-doc__meta-label offer-doc__meta-label--premium">Ajánlat dátuma</span>
            <span class="offer-doc__meta-value offer-doc__meta-value--premium">2025. január 15.</span>
          </div>
        </header>
          <div class="offer-doc__premium-body">

        <section class="offer-doc__content offer-doc__content--card">
          <section>
    <h2>Bevezető</h2>
    <p>A projekt célja egy modern, AI-támogatott ajánlatkészítő eszköz bevezetése.</p>
    <p>A megoldás lehetővé teszi a csapat számára, hogy gyorsan reagáljon az ügyféligényekre, miközben megőrzi a márka hangját.</p>
    <h2>Szolgáltatások</h2>
    <ul>
      <li>Kezdeti konzultáció és stratégiaalkotás</li>
      <li>Felhasználói élménykutatás és prototípus készítés</li>
      <li>Bevezetési támogatás és csapat tréning</li>
    </ul>
    <h2>Eredmények</h2>
    <p>Az automatizált folyamat 60%-kal csökkenti az ajánlatok összeállításához szükséges időt.</p>
  </section>
        </section>
  
        <section class="offer-doc__table offer-doc__table--card">
          <h2 class="offer-doc__section-title"><span class="offer-doc__section-icon" aria-hidden="true"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><path d="M7 7h10l4 5-4 5H7l-4-5z"/><path d="M12 9v6"/><path d="M10 11h4"/></svg></span><span>Pricing</span></h2>
          
    <style>
      .offer-doc__pricing-table {
        width: 100%;
        border-collapse: collapse;
        border: 1px solid #d7dce6;
      }
      .offer-doc__pricing-table th,
      .offer-doc__pricing-table td {
        padding: 8px 12px;
        border-bottom: 1px solid #e4e8f0;
      }
      .offer-doc__pricing-table thead th {
        background-color: #f1f4f8;
        text-align: left;
      }
      .offer-doc__pricing-table tbody tr:nth-child(even) {
        background-color: #f9fbff;
      }
      .offer-doc__pricing-table tbody td:nth-child(2),
      .offer-doc__pricing-table tbody td:nth-child(4),
      .offer-doc__pricing-table tbody td:nth-child(5),
      .offer-doc__pricing-table tbody td:nth-child(6),
      .offer-doc__pricing-table thead th:nth-child(2),
      .offer-doc__pricing-table thead th:nth-child(4),
      .offer-doc__pricing-table thead th:nth-child(5),
      .offer-doc__pricing-table thead th:nth-child(6),
      .offer-doc__pricing-table tfoot td:last-child {
        text-align: right;
      }
      .offer-doc__pricing-table tfoot tr {
        background-color: #eef2ff;
        font-weight: 600;
      }
      .offer-doc__pricing-table tfoot tr:first-child td {
        border-top: 2px solid #b2c3ff;
      }
      .offer-doc__pricing-table tfoot tr:last-child {
        font-weight: 700;
      }
    </style>
    <table class="offer-doc__pricing-table">
      <colgroup>
        <col style="width: 32%;" />
        <col style="width: 12%; min-width: 60px;" />
        <col style="width: 12%; min-width: 80px;" />
        <col style="width: 16%; min-width: 110px;" />
        <col style="width: 12%; min-width: 80px;" />
        <col style="width: 16%;" />
      </colgroup>
      <thead>
        <tr>
          <th>Tétel</th>
          <th>Mennyiség</th>
          <th style="text-align: left;">Egység</th>
          <th>Egységár (Ft)</th>
          <th>ÁFA %</th>
          <th>Összesen (nettó)</th>
        </tr>
      </thead>
      <tbody>
        
              <tr>
                <td style="max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Stratégiai workshop">Stratégiai workshop</td>
                <td>2</td>
                <td style="text-align: left;">nap</td>
                <td>120 000 Ft</td>
                <td>27 %</td>
                <td>240 000 Ft</td>
              </tr>
            
              <tr>
                <td style="max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Digitális prototípus">Digitális prototípus</td>
                <td>1</td>
                <td style="text-align: left;">projekt</td>
                <td>450 000 Ft</td>
                <td>27 %</td>
                <td>450 000 Ft</td>
              </tr>
            
              <tr>
                <td style="max-width: 280px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Támogatás">Támogatás</td>
                <td>6</td>
                <td style="text-align: left;">hónap</td>
                <td>75 000 Ft</td>
                <td>27 %</td>
                <td>450 000 Ft</td>
              </tr>
            
      </tbody>
      <tfoot>
        <tr>
          <td colspan="5">Nettó összesen</td>
          <td>1 140 000 Ft</td>
        </tr>
        <tr>
          <td colspan="5">ÁFA</td>
          <td>307 800 Ft</td>
        </tr>
        <tr>
          <td colspan="5">Bruttó összesen</td>
          <td>1 447 800 Ft</td>
        </tr>
      </tfoot>
    </table>
  
        </section>
          </div>

        <footer class="offer-doc__footer">
          <div class="offer-doc__footer-grid">
            <div class="offer-doc__footer-column">
              <span class="offer-doc__footer-label">Kapcsolattartó</span>
              <span class="offer-doc__footer-value">Kiss Júlia</span>
            </div>
            <div class="offer-doc__footer-column">
              <span class="offer-doc__footer-label">E-mail</span>
              <span class="offer-doc__footer-value">hello@example.com</span>
              <span class="offer-doc__footer-label offer-doc__footer-label--sub">Telefon</span>
              <span class="offer-doc__footer-value">+36 30 123 4567</span>
            </div>
            <div class="offer-doc__footer-column">
              <span class="offer-doc__footer-label">Weboldal</span>
              <span class="offer-doc__footer-value">https://example.com</span>
            </div>
            <div class="offer-doc__footer-column">
              <span class="offer-doc__footer-label">Cégadatok</span>
              <span class="offer-doc__footer-label offer-doc__footer-label--sub">Cím</span>
              <span class="offer-doc__footer-value">Budapest, Andrássy út 1.</span>
              <span class="offer-doc__footer-label offer-doc__footer-label--sub">Adószám</span>
              <span class="offer-doc__footer-value">12345678-1-12</span>
            </div>
          </div>
        </footer>
  
      </article>
    </main>
</body>
</html>"
`;
